styles/styles.css
/*
Name: Akshath Jain
Date: 8/27/17
Purpose: CSS document for HackNA website
*/

body{
	font-family: "Montserrat", sans-serif;
	font: 20px;
	line-height: 1.8;
}

.container-fluid{
	padding: 0px;
	margin: 0px;
}

.btn-primary{
	color: #ffffff;
	font-size: 15px;
	background-color: #FFA000;
	border: 0px;
	border-radius: 0px;
	padding: 10px 20px;
}

.btn-primary:hover{
	background-color: #db8900;
}

.link-light{
	color: #90CAF9;
}

.link-light:hover{
	color: #90CAF9;
	cursor: pointer;
}

/*navbar styles*/
.navbar{
	padding-top: 15px;
	padding-bottom: 15px;
	border: 0;
	border-radius: 0;
	margin-bottom: 0;
	font-size: 16px !important;
	transition: 0.6s;
	-webkit-transition: 0.6s; /*for safari*/
	background-color: rgba(35,35,35,0);
}

.nav li a, .navbar-header a{
	color: #ffffff  !important;

}

.nav li a:hover{
	color: #FFA000 !important;
}

.navbarStateWhenScrolled{
	background-color: rgb(35,35,35);
	padding-top: 11px;
	padding-bottom: 11px;
	box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
}

.navbar-menu{
	border: 0px;
}

.navbar-menu:hover{
	background-color: rgba(0,0,0,0) !important;
}

.icon-bar{
	background-color: #ffffff !important;
}

.logo{
	height: 55px;
	transition: 0.5s;
	-webkit-transition: 0.5s;
}

.logo-small{
	height: 45px;
	transition: 0.5s;
	-webkit-transition: 0.5s;
}

/*general body styles*/
.body-background-image{
	background: url("../images/background-vector.svg");
	background-size: cover;
	background-attachment: fixed;
}

.body-background-color{
	background-color: rgba(0,0,0,0.5);
	width: 85%;
	margin: 0 auto;
}

/*adjusts the image and overall width dimensions for mobile viewports*/
@media only screen and (max-width: 1100px){
	.body-background-color{
		background-color: #424242;
		width: 100%;
	}
}

/*home styles*/
.bg-home{
	background-color: rgba(0,0,0,0.42);
	padding-top: 70px;
	padding-bottom: 70px;
	padding-right: 10px;
	padding-left: 10px;
	height: 100vh;
	transition: 0.3s;
	-webkit-transition: 0.3s; /*for safari*/
}

.bgHomeStateWhenScrolled{
	background-color: rgba(0,0,0,0);
}

.bg-home-text{
	color: #ffffff;
	position: relative;
	top: 40%;
	transform: translateY(-40%);
}

.bg-home-text h1{

	font-size: 35px;
}

.bg-home-text p{

	font-size: 20px;
}


/* general information styles*/
.bg-info{
	background-color: #ffffff;
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
}

.bg-info-text h1{
	font-size: 27px;
	margin-bottom: 50px;
}

.bg-info-text h3{

	font-size: 18px;
}

.bg-info-text p{

	font-size: 16px;
}

/* map styles*/
.bg-map{
	background-color: rgba(255,255,255,0);
}

/* FAQ styles*/
.bg-faq{
	background-color: rgba(255,255,255,0);
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
	color: #ffffff;
}

.bg-faq-text h1{
	font-size: 27px;
	margin-bottom: 50px;
}

.bg-faq-text h3{
	font-size: 18px;
}

.bg-faq-text p{

	font-size: 16px;
}

.card{
	background: #FFA000;
	border-radius: 15px;
	padding: 10px;
	padding-left: 25px;
	padding-right: 25px;
	margin-bottom: 30px;
}

/* schedule styles*/
.bg-schedule{
	background-color: #F2F5F7;
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
}

.bg-schedule-text h1{
	font-size: 27px;
	margin-bottom: 50px;
}

.bg-schedule-text h3{

	font-size: 18px;
}

.bg-schedule-text p{

	font-size: 16px;
}

.bg-schedule-text li{

	font-size: 16px;
}

/* about styles*/
.bg-about{
	background-color: #ffffff;
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
}

.bg-about-text h1{
	font-size: 27px;
	margin-bottom: 50px;
}

.bg-about-text h3{

	font-size: 18px;
}

.bg-about-text p{

	font-size: 16px;
}

.staff-image{
	margin-top: 70px;
	margin-bottom: 10px;
	width: 275px;
}

.clickable{
	transition: 0.2s;
	-webkit-transition: 0.2s;
}

.clickable:hover{
	opacity: 0.8;
	transition: 0.2s;
	-webkit-transition: 0.2s;
	cursor: pointer;
}

.img-scalable{
	text-align: center;
	max-width: 100%;
	display: block;
	height: auto;
	margin: 0 auto;
}

/* contact styles*/
.bg-contact{
	background-color: rgba(255,255,255,0);
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
	color: #ffffff;
}

.bg-contact-text h1{
	font-size: 27px;
	margin-bottom: 50px;
}

.bg-contact-text h3{

	font-size: 18px;
}

.bg-contact-text p{

	font-size: 16px;
}

.social-media-icons{
	width: 27px;
}

/* footer styles*/
.bg-footer{
	background-color: #2f2f2f;
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
}

.bg-footer-text{
	color: #ffffff;
	font-size: 16px;
}

